--- a/SimpleTrader/SimpleTrader.WPF/Controls/NavigationBar.xaml
+++ b/SimpleTrader/SimpleTrader.WPF/Controls/NavigationBar.xaml
@@ -5,8 +5,15 @@
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:nav="clr-namespace:SimpleTrader.WPF.State.Navigators"
              xmlns:local="clr-namespace:SimpleTrader.WPF.Controls"
+             xmlns:vm="clr-namespace:SimpleTrader.WPF.ViewModels"
+             xmlns:converters="clr-namespace:SimpleTrader.WPF.Converters"
              mc:Ignorable="d" 
              d:DesignHeight="450" d:DesignWidth="800">
+
+    <UserControl.Resources>
+        <converters:EqualValueToParameterConverter x:Key="EqualValueToParameterConverter" />
+    </UserControl.Resources>
+
     <Grid>
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto"/>
@@ -27,8 +34,14 @@
                 <ColumnDefinition Width="*" />
             </Grid.ColumnDefinitions>
 
-            <RadioButton Grid.Column="0" Content="Home" Command="{Binding UpdateCurrentViewModelCommand}" CommandParameter="{x:Static nav:ViewType.Home}"/>
-            <RadioButton Grid.Column="1" Content="Portfolio" Command="{Binding UpdateCurrentViewModelCommand}" CommandParameter="{x:Static nav:ViewType.Portfolio}" />
+            <RadioButton Grid.Column="0" Content="Home" 
+                         IsChecked="{Binding CurrentViewModel, Mode=OneWay, ConverterParameter={x:Type vm:HomeViewModel},Converter={StaticResource EqualValueToParameterConverter}}" 
+                         Command="{Binding UpdateCurrentViewModelCommand}" 
+                         CommandParameter="{x:Static nav:ViewType.Home}"/>
+            <RadioButton Grid.Column="1" Content="Portfolio" 
+                         IsChecked="{Binding CurrentViewModel, Mode=OneWay, ConverterParameter={x:Type vm:PortfolioViewModel},Converter={StaticResource EqualValueToParameterConverter}}" 
+                         Command="{Binding UpdateCurrentViewModelCommand}" 
+                         CommandParameter="{x:Static nav:ViewType.Portfolio}" />
             <RadioButton Grid.Column="2" Content="Buy" />
             <RadioButton Grid.Column="3" Content="Sell" />
         </Grid>
