--- a/SimpleTrader/SimpleTrader.WPF/App.xaml
+++ b/SimpleTrader/SimpleTrader.WPF/App.xaml
@@ -20,6 +20,10 @@
                 <views:PortfolioView/>
             </DataTemplate>
 
+            <DataTemplate DataType="{x:Type viewmodels:BuyViewModel}">
+                <views:BuyView/>
+            </DataTemplate>
+
         </ResourceDictionary>
     </Application.Resources>
 
