--- a/SimpleTrader/SimpleTrader.WPF/Controls/NavigationBar.xaml
+++ b/SimpleTrader/SimpleTrader.WPF/Controls/NavigationBar.xaml
@@ -42,7 +42,10 @@
                          IsChecked="{Binding CurrentViewModel, Mode=OneWay, ConverterParameter={x:Type vm:PortfolioViewModel},Converter={StaticResource EqualValueToParameterConverter}}" 
                          Command="{Binding UpdateCurrentViewModelCommand}" 
                          CommandParameter="{x:Static nav:ViewType.Portfolio}" />
-            <RadioButton Grid.Column="2" Content="Buy" />
+            <RadioButton Grid.Column="2" Content="Buy" 
+                         IsChecked="{Binding CurrentViewModel, Mode=OneWay, ConverterParameter={x:Type vm:BuyViewModel},Converter={StaticResource EqualValueToParameterConverter}}" 
+                         Command="{Binding UpdateCurrentViewModelCommand}" 
+                         CommandParameter="{x:Static nav:ViewType.Buy}" />
             <RadioButton Grid.Column="3" Content="Sell" />
         </Grid>
     </Grid>
