--- a/SimpleTrader/SimpleTrader.WPF/Views/BuyView.xaml
+++ b/SimpleTrader/SimpleTrader.WPF/Views/BuyView.xaml
@@ -9,23 +9,38 @@
     <Grid Margin="20">
         <Grid.RowDefinitions>
             <RowDefinition Height="Auto" />
-            <RowDefinition Height="*" />
+            <RowDefinition Height="Auto" />
         </Grid.RowDefinitions>
 
         <WrapPanel Grid.Row="0" HorizontalAlignment="Center">
             <TextBox Width="100" Text="{Binding Symbol, UpdateSourceTrigger=PropertyChanged}"/>
-            <Button Margin="10 0 0 0" Content="Search" Command="{Binding SearchSymbolCommand}" />
+            <Button Margin="5 0 0 0" Content="Search" Command="{Binding SearchSymbolCommand}" />
         </WrapPanel>
 
-        <WrapPanel Margin="0 10 0 0" Grid.Row="1" HorizontalAlignment="Center">
-            <Border BorderBrush="Black" BorderThickness="1" Padding="20">
+        <Grid Margin="0 20 0 0" Grid.Row="1" MaxWidth="500">
+            <Grid.Style>
+                <Style TargetType="Grid">
+                    <Style.Triggers>
+                        <DataTrigger Binding="{Binding SearchResultSymbol}" Value="" >
+                            <Setter Property="Visibility" Value="Collapsed" />
+                        </DataTrigger>
+                    </Style.Triggers>
+                </Style>
+            </Grid.Style>
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="2*" />
+            </Grid.ColumnDefinitions>
+
+            <Border Grid.Column="0" BorderBrush="Gray" BorderThickness="1" Padding="20" CornerRadius="3 0 0 3">
                 <StackPanel>
-                    <TextBlock FontSize="32" Text="{Binding Symbol}" HorizontalAlignment="Center"/>
-                    <TextBlock Margin="0 10 0 0" Text="{Binding StockPrice}" />
+                    <TextBlock FontSize="32" Text="{Binding SearchResultSymbol}" HorizontalAlignment="Center"/>
+                    <TextBlock Margin="0 10 0 0" Text="{Binding StockPrice}" HorizontalAlignment="Center"/>
                 </StackPanel>
             </Border>
-            <Border BorderBrush="Black" BorderThickness="1" Padding="20">
-                <StackPanel VerticalAlignment="Center">
+            <Border Grid.Column="1" BorderBrush="Gray" BorderThickness="0 1 1 1" Padding="20" CornerRadius="0 3 3 0">
+                <StackPanel HorizontalAlignment="Center">
                     <WrapPanel Margin="0 10">
                         <TextBlock Width="150" Text="Shares to buy:"/>
                         <TextBox Width="50" Text="{Binding ShareToBuy,UpdateSourceTrigger=PropertyChanged}"/>
@@ -36,10 +51,10 @@
                     </WrapPanel>
                     <TextBlock HorizontalAlignment="Center" FontSize="32" Margin="0 10" 
                                Text="{Binding TotalPrice, StringFormat={}{0:C}}" />
-                    <Button Margin="0 10" Content="Buy" Command="{Binding BuyStockCommand}"/>
+                    <Button FontSize="24" Margin="0 10" Content="Buy" Command="{Binding BuyStockCommand}"/>
                 </StackPanel>
             </Border>
 
-        </WrapPanel>
+        </Grid>
     </Grid>
 </UserControl>
